[gd_scene format=3 uid="uid://iqrh31wd8rbm"]

[ext_resource type="Script" uid="uid://cpec1tdf1mncs" path="res://Codigo/control.gd" id="1_h1coa"]
[ext_resource type="Texture2D" uid="uid://d0oo8ivey6eh8" path="res://Assets/efectos/mask 2.png" id="2_0qnxx"]
[ext_resource type="Texture2D" uid="uid://ce0jmbk2nhaf4" path="res://Assets/efectos/mask 3.png" id="3_wc7xb"]
[ext_resource type="Texture2D" uid="uid://dvnr6et74hq4e" path="res://Assets/efectos/pj prota mask 1.png" id="4_w2p86"]

[node name="CanvasLayer" type="CanvasLayer" unique_id=1909854209]
script = ExtResource("1_h1coa")

[node name="PjProtaMask1" type="Sprite2D" parent="." unique_id=203756989]
position = Vector2(146.79999, 40.8)
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_w2p86")

[node name="Mask3" type="Sprite2D" parent="." unique_id=1639377890]
position = Vector2(194.00009, 83.000015)
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_wc7xb")

[node name="Mask2" type="Sprite2D" parent="." unique_id=138220269]
position = Vector2(99.999985, 85.00003)
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_0qnxx")
